# auto-clicker

./: Cargo.toml  README.md
src/: main.rs
src/support/: mod.rs
